css changes to fix home page on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@
 header {
     width: 100% !important;
     margin-left: 0;
-    margin-left: calc(-50vw + 50%);
     padding-left: 1rem;
     padding-right: 1rem;
     background-size: cover;
@@ -38,7 +37,7 @@ footer {
 body.home_page {
     margin: 0;
     padding: 0;
-    height: 100%;
+    height: 100vh;
     overflow-x: hidden;
     background-image: url('images/background_three.jpg');
     background-size: cover;
